--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,17 @@
-accelerate==1.10.1
+Flask==3.1.2
+python-dotenv==1.1.1
+requests==2.32.5
+Pillow==11.3.0
 blinker==1.9.0
-certifi==2025.8.3
-charset-normalizer==3.4.3
-click==8.3.0
-colorama==0.4.6
 dotenv==0.9.9
 filelock==3.19.1
-Flask==3.1.2
-fsspec==2025.9.0
 git-filter-repo==2.47.0
 huggingface-hub==0.35.1
-idna==3.10
 Jinja2==3.1.6
-MarkupSafe==3.0.2
-mpmath==1.3.0
 packaging==25.0
 pillow==11.3.0
-psutil==7.1.0
-python-dotenv==1.1.1
-PyYAML==6.0.2
-regex==2025.9.18
 requests==2.32.5
-safetensors==0.6.2
-setuptools==80.9.0
-sympy==1.14.0
-tokenizers==0.22.1
-tqdm==4.67.1
-typing_extensions==4.15.0
 urllib3==2.5.0
 Werkzeug==3.1.3
+
 
